5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_2895.log
== TEST (2019-03-26 18:19:08) 
-- CODE:
q=2
vu=80
f=20
tot=q*vu
tot1=tot+f
print(tot1)
-- OUTPUT:
180
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:19) 
-- CODE:
q=2
vu=80
f=20
tot=q*vu
tot1=tot+f
print(tot1)
-- EXECUTION TIME:
0.102677
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
180
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
180
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
180
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:27) 
-- CODE:
q=2
vu=80
f=20
tot=q*vu
tot1=tot+f
print(tot1)
-- OUTPUT:
180
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:13) 
-- CODE:
quantidade= input(2)
valoru= input(80)
frete= input(20)
tot=quantidade*valoru
tot1=tot+frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tot=quantidade*valoru
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:23:15) 
-- CODE:
quantidade= input(2)
valoru= input(80)
frete= input(20)
tot=quantidade*valoru
tot1=tot+frete
-- EXECUTION TIME:
0.170657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    tot=quantidade*valoru
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:15) 
-- CODE:
quantidade= input(2)
valoru= input(80)
frete= input(20)
tot=quantidade*valoru
tot1=tot+frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tot=quantidade*valoru
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:34) 
-- CODE:
quantidade= input(4)
valoru= input(10)
frete= input(20)
tot=quantidade*valoru
tot1=tot+frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tot=quantidade*valoru
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:23:36) 
-- CODE:
quantidade= input(4)
valoru= input(10)
frete= input(20)
tot=quantidade*valoru
tot1=tot+frete
-- EXECUTION TIME:
0.155963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    tot=quantidade*valoru
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:37) 
-- CODE:
quantidade= input(4)
valoru= input(10)
frete= input(20)
tot=quantidade*valoru
tot1=tot+frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tot=quantidade*valoru
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:57:01) 
-- CODE:
qtd_de_jogos = 3
valor_unitario = 20
frete = 5
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
print(qtd_de_jogos + valor_unitario + frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:57:37) 
-- CODE:
qtd_de_jogos = 3
valor_unitario = 20
frete = 5
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
print(qtd_de_jogos * valor_unitario + frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:57:50) 
-- CODE:
qtd_de_jogos = 3
valor_unitario = 20
frete = 5
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
print(qtd_de_jogos * valor_unitario + frete)
-- EXECUTION TIME:
0.171113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 5, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:58:38) 
-- CODE:
qtd_de_jogos = 3
valor_unitario = 20
frete = 5
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (qtd_de_jogos * valor_unitario + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:58:53) 
-- CODE:
qtd_de_jogos = 3
valor_unitario = 20
frete = 5
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (qtd_de_jogos * valor_unitario + frete)
print(total)
-- EXECUTION TIME:
0.218646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 5, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:59:00) 
-- CODE:
qtd_de_jogos = 3
valor_unitario = 20
frete = 5
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (qtd_de_jogos * valor_unitario + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:59:55) 
-- CODE:
total = (qtd_de_jogos * valor_unitario + frete)
int(input("quantidade de jogos?"))
int(input("valor do jogo?"))
int(input("frete"))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total = (qtd_de_jogos * valor_unitario + frete)
NameError: name 'qtd_de_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:00:40) 
-- CODE:

int(input("quan?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (qtd_de_jogos * valor_unitario + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:30) 
-- CODE:

int(input("quan?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (quan * valor do jogo + frete)
print(total)
-- ERROR:
File "XXXX", line 5
    total = (quan * valor do jogo + frete)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:32) 
-- CODE:

int(input("quan?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (quan * valor do jogo + frete)
print(total)
-- ERROR:
File "XXXX", line 5
    total = (quan * valor do jogo + frete)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:33) 
-- CODE:

int(input("quan?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (quan * valor do jogo + frete)
print(total)
-- ERROR:
File "XXXX", line 5
    total = (quan * valor do jogo + frete)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:35) 
-- CODE:

int(input("quan?"))
int(input("valor do jogo?"))
int(input("frete"))
total = (quan * valor do jogo + frete)
print(total)
-- ERROR:
File "XXXX", line 5
    total = (quan * valor do jogo + frete)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:58) 
-- CODE:

int(input("quan?"))
int(input("valor_do_jogo?"))
int(input("frete"))
total = (quan * valor_do_jogo + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:02:13) 
-- CODE:

int(input("quan?"))
int(input("valor_do_jogo?"))
int(input("frete"))
total = (quan * valor_do_jogo + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:02:14) 
-- CODE:

int(input("quan?"))
int(input("valor_do_jogo?"))
int(input("frete"))
total = (quan * valor_do_jogo + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:02:14) 
-- CODE:

int(input("quan?"))
int(input("valor_do_jogo?"))
int(input("frete"))
total = (quan * valor_do_jogo + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:02:16) 
-- CODE:

int(input("quan?"))
int(input("valor_do_jogo?"))
int(input("frete"))
total = (quan * valor_do_jogo + frete)
print(total)
-- EXECUTION TIME:
0.201352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 3, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:07:22) 
-- CODE:
q=int(input("quan?"))
valor=int(input("valor_do_jogo?"))
tr=int(input("frete"))
qtd=4
valor_jogo=20
frete1=5
total= q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:07:36) 
-- CODE:
q=int(input("quan?"))
valor=int(input("valor_do_jogo?"))
tr=int(input("frete"))
qtd=4
valor_jogo=20
frete1=5
total= q * valor + tr
print(total)
-- EXECUTION TIME:
0.197772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:07:41) 
-- CODE:
q=int(input("quan?"))
valor=int(input("valor_do_jogo?"))
tr=int(input("frete"))
qtd=4
valor_jogo=20
frete1=5
total= q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:08:06) 
-- CODE:
q=int(input("quan?"))
valor=int(input("valor_do_jogo?"))
tr=int(input("frete"))
qtd=4
valor_jogo=20
frete1=5
total= q * valor + tr
print(total)
-- EXECUTION TIME:
0.217108
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:09:11) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
qtd=4
valor_jogo=20
frete1=5
total= q * valor + tr
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:09:25) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
qtd=4
valor_jogo=20
frete1=5
total= q * valor + tr
print(total)
-- EXECUTION TIME:
0.126027
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:11:55) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total= q * valor + tr
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:12:05) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total= q * valor + tr
print(total)
-- EXECUTION TIME:
0.188836
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
